# rvfuse

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  bbv.out.0.bb  bbv_upstream.c  demo.c  demo.elf  patch.diff  prepare_model.sh  pyproject.toml  qemu-usage  rvv-gap-analysis  setup.sh  test_bbv  verify_bbv.sh
.claude/commands/: rainbow.analyze.md  rainbow.architect.md  rainbow.assess-context.md  rainbow.checklist.md  rainbow.clarify.md  rainbow.design-e2e-test.md  rainbow.design.md  rainbow.implement.md  rainbow.perform-e2e-test.md  rainbow.regulate.md  rainbow.specify.md  rainbow.standardize.md  rainbow.taskify.md  rainbow.tasks-to-ado.md  rainbow.tasks-to-issues.md
.claude/skills/: cross-compile-app  dfg-check  dfg-generate  fusion-scheme  guardian  llvm-ai-attribution  md2pdf  perf-profiling  perf-scalar-profiling  qemu-bbv-usage  qemu-usage  rvv-gap-analysis  rvv-op  rvv512-optimization-pipeline  worktree-setup
.trae/documents/: 002-docker-llvm-toolchain-plan.md
applications/llama.cpp/: .gitignore  README.md  build.sh  qwen  riscv64-linux-toolchain.cmake
applications/onnxrt/: README.md  fix-int8-riscv.patch  int8-crash.md  test_resnet50.sh
applications/onnxrt/superglue/runner/: CMakeLists.txt  superglue_runner.cpp
applications/onnxrt/vit-base-16/runner/: CMakeLists.txt  vit_runner.cpp
applications/opencv/: .gitignore  README.md  build.sh  riscv64-linux-toolchain.cmake
applications/opencv/kcf/: CMakeLists.txt  README.md  build.sh
applications/opencv/kcf/runner/: kcf_demo.cpp  kcf_video.cpp
applications/opencv/kcf/rvv-patches/get-feature-maps/: README.md  patch.diff  rvv_get_feature_maps.inl  test.cpp
applications/opencv/kcf/scripts/: profile_kcf.py
applications/orb-slam3/: build.sh  riscv64-linux-toolchain.cmake
applications/rv64gcv-llama.cpp/: README.md  build.sh  qwen
archived/aitc-task-orb-slam3/: guardian-orb-slam3-p2.md
docs/: architecture.md  docker-llvm-guide.md  multi-platform-vector-comparison.md  rvv-gap-analysis-ggml_gemv_q4_K_8x8_q8_K-2026-04-16.md  vector-extension-encoding-analysis.md  work-report-2026-04-07.md  yolo_demo_fusion_report.md
docs/cx/: 指令约束及执行延迟(1).xlsx
docs/plans/: 2026-03-31-setup-foundation-design.md  2026-04-02-onnxrt-yolo-bbv-design.md  2026-04-04-onnxrt-yolo-native-build-design.md  2026-04-05-dfg-generation-design.md  2026-04-06-dfg-v1.1-design.md  2026-04-06-selective-dfg-design.md  2026-04-06-setup-script-redesign.md  2026-04-07-isa-extension-design.md  2026-04-08-fusion-pattern-mining-design.md  2026-04-08-fusion-pattern-mining-plan.md  2026-04-08-phase2-feature-roadmap.md  2026-04-08-rvv-support-design.md  2026-04-09-c920-onnxrt-cross-compile-design.md  2026-04-09-c920-onnxrt-plan.md  2026-04-09-configurable-constraints-design.md  2026-04-09-configurable-constraints-plan.md  2026-04-09-fusion-scheme-skill-design.md  2026-04-09-fusion-scheme-skill-plan.md  2026-04-09-fusion-scoring-design.md  2026-04-09-fusion-scoring-plan.md  2026-04-10-bbv-independent-build-design.md  2026-04-10-bbv-independent-build-plan.md  2026-04-10-dfg-llvm22-upgrade-design.md  2026-04-10-docker-onnxrt-1.24.4-design.md  2026-04-10-docker-onnxrt-1.24.4-plan.md  2026-04-10-f1-pattern-mining-redesign.md  2026-04-10-f1-redesign.json  2026-04-10-llvm22-cross-compile-ort124-design.md  2026-04-10-onnxrt-crosscompile-design.md  2026-04-10-onnxrt-crosscompile-plan.md  2026-04-20-cross-compile-app-skill-design.md  2026-04-20-cross-compile-app-skill-plan.md  2026-04-21-bbv-function-scoped-design.md  2026-04-23-qemu-vlen-mismatch.md  2026-04-28-aitc-workflow-design.md  2026-04-28-aitc-workflow-impl.md  agent-team-rvv-analysis-2026-04-26.md  agent-team-rvv-analysis-batch2-2026-04-27.md  guardian-log-b2.md  guardian-log-int4.md  (+8 more)
docs/report/: README.md  multi-platform-vector-comparison.md  rvv-extension-comprehensive-analysis-2026-04-17.md  rvv-extension-comprehensive-analysis-2026-04-21.md  rvv-extension-comprehensive-analysis-2026-04-22.md  rvv-extension-comprehensive-analysis-2026-04-24.md  rvv-extension-comprehensive-analysis-2026-04-26.md  rvv-extension-proposal-2026-04-16.md
memory/: ground-rules.md
patches/mlas/: README.md  rvv-gemm-vl16.patch
patches/qemu-bbv/: 0001-feat-plugins-add-basic-block-vector-bbv-plugin-for-Q.patch  0002-feat-plugins-output-basic-block-assembly-instruction.patch  0003-fix-bbv-flush-remaining-BBV-data-at-exit-when-instru.patch
skills/aitc-task-orb-slam3-p3/: build-so-copy-bug.md  guardian-orb-slam3-p3.md  t1-report.md  t2-report.md  t3-report.md  teammate-shutdown-procedure.md
skills/cross-compile-app/: SKILL.md
skills/dfg-generate/: SKILL.md
skills/guardian/: SKILL.md
skills/llvm-ai-attribution/: SKILL.md
skills/md2pdf/: SKILL.md
skills/perf-profiling/: SKILL.md
skills/perf-scalar-profiling/: SKILL.md
skills/qemu-bbv-usage/: SKILL.md
skills/rvv-gap-analysis/: SKILL.md
skills/rvv-op/: SKILL.md
skills/rvv512-optimization-pipeline/: SKILL.md
skills/worktree-setup/: SKILL.md
specs/001-riscv-fusion-setup/: data-model.md  design.md  quickstart.md  research.md  spec.md  tasks.md
tests/llvm-22/: build.sh  (+6 more)
tools/: README.md  analyze_bbv.py  build_llvm.sh  generate_report_pdfs.py  perf_scalar_profile.py  profile_to_dfg.sh  test_analyze_bbv.py  test_rvv_gemm_vl16.sh
tools/yolo_runner/: CMakeLists.txt  yolo_postprocess.cpp  yolo_preprocess.cpp  yolo_runner.cpp
(+643 files in other folders)
