[project]
name = "rvfuse-dfg"
version = "0.1.0"
description = "RISC-V Basic Block Data Flow Graph generator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tools/dfg/tests"]
